# example_oo

./: README.md  carro.py  carro2.py  carta.py  main.py  pessoa.py  pyproject.toml
